# Deca-Fixes

./: BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml
appveyor/: on_success.py
python/: requirements.txt  requirements_latest.txt
python/deca/deca/: db_commands.py  db_core.py  db_processor.py  db_view.py  db_wrap.py  fast_file.py  ff_adf.py  ff_arc_tab.py  ff_txt.py  ff_types.py  game_info.py
python/deca_gui/deca_gui/: dataviewwidget.py  deca_interfaces.py  main.py  main_window.py  main_window.ui  vfs_widgets.py  vfsdirwidget.py  vfsnodetablewidget.py  viewer.py  viewer_image.py  viewer_info.py  viewer_obc.py  viewer_sarc.py  viewer_text.py
resources/deca/: strings.txt
resources/deca/an/: filenames.txt
resources/deca/gameinfo/: an.json  hp.json  mm.json  thc.json  thp.json
resources/deca/ghidra_strings/: gz.txt  hp.txt  jc3.txt  jc4.txt  rg2.txt
